# rustina

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  communities.json  compose.yaml  core.ts  default.nix  deno.json  deps.ts  flake.nix  mod.ts  module.nix  result  rustfmt.toml  shell.nix  source.json
.github/workflows/: test.yml
data/: roadmap.md  topics.json
delta/: about.ts  channel.ts  groups.ts  help.ts  inline.ts  latest.ts  mod.ts  rules.ts  start.ts  trigger.ts  useful.ts  version.ts  which.ts
hooks/: isGroup.ts  isHome.ts  isPrivate.ts  isReply.ts
src/: bot.rs  config.rs  lib.rs  main.rs
src/functions/: about.rs  check.rs  groups.rs  help.rs  inline.rs  joined.rs  latest.rs  mod.rs  offtop.rs  roadmap.rs  rules.rs  start.rs  useful.rs  version.rs  warn.rs
src/hooks/: is_private.rs  mod.rs
src/utils/: github.rs  group_manager.rs  groups.rs  inline_manager.rs  inlines.rs  inmgr.rs  kbmng.rs  keyboard.rs  message.rs  mod.rs  resources.rs  topics.rs
types/: Github.d.ts
utils/: checker.ts  config.ts  encoder.ts  generator.ts  pager.ts  picker.ts  sender.ts
